# yomea

./: .gitignore  LICENSE  README.md  forge.config.js  index.html  index.js  package-lock.json  package.json  preload.js  script.js  styles.css
.github/workflows/: package.yml
public/: index.html  script.js  styles.css  topbar.html
rust-src/: Cargo.toml  build.rs  tauri.conf.json
rust-src/components/: script.js  styles.css  topbar.html
rust-src/src/: lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
