[package]
name = "Yomea"
version = "0.1.0"
description = "Web browser"
authors = ["Yomo"]
license = ""
repository = "https://github.com/YomoSK/yomea"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.6", features = ["unstable"] }
isahc = "1.7.2"
scraper = "0.21.0"
